--- a/style.css
+++ b/style.css
@@ -8,12 +8,31 @@
 
 html,body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
+}
+
+body{
+    background: url('imagens/fundo-madeira.jpg') no-repeat top center;    
+    background-size: cover; /* rolagem de imagem */
+    background-attachment: fixed;
+     
 }
 
 main{
     height: 100vh;
     position: relative;
-    background-color: green;
+    
+}
+section#telefone{
+    position: absolute;   
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);  
+/* centralizacao de comando */
+    height: 627px;
+    width: 311px;
+    background-color: blue;
+    background: url('imagens/frame-iphone.png');
+    background-repeat: no-repeat;
 }
