--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ section#telefone{
     background: url('imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    width: 270px;     /* altura posicionamento largura e tamanho da tela home criada */
+    height: 472px;
+}
