--- a/style.css
+++ b/style.css
@@ -45,3 +45,26 @@ iframe#tela{
     width: 270px;     /* altura posicionamento largura e tamanho da tela home criada */
     height: 472px;
 }
+
+section#redessociais{
+    text-align: right;
+}
+
+section#redessociais img{
+
+    width: 50px;
+    margin: 10px;
+   border-radius: 50%;    /* tamanho forma e espacamento nas imagens das edes sociais */
+   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.634);
+   transform: scale(95%);  /* afunda as imagens dentro do site */
+   box-sizing: border-box;  /* fixa os elementos dentro da tela */
+}
+
+section#redessociais img:hover{
+
+   border: 2px solid rgba(255, 255, 255, 0.425);     /* icrculo ao redor das figuras das rredes sociais */
+   transform: translate(-5px,-5px);  /* rotacao de itens para cima */
+   box-shadow: 5px 5px 5px black;
+   box-shadow: 5px 5px 5px black;
+   transition: 1s, border 1s;
+}
